--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <nav>
         <div class="logo">
-            <img src="./Huddle-landing-page-Design/images/logo.svg" alt="Huddle Logo">
+            <img src="/Huddle-landing-page-Design/images/logo.svg" alt="Huddle Logo">
         </div>
         <div class="nav-btn">
            <button type="submit" class="btn-primary btn-block">Try It Free</button>
@@ -24,7 +24,7 @@
                 <button type="submit" class="btn btn-primary btn-block">Get Started For Free</button>
             </div>
             <div class="right">
-                <img class="img" src="./Huddle-landing-page-Design/images/illustration-mockups.svg" alt="illustration mockups">
+                <img class="img" src="/Huddle-landing-page-Design/images/illustration-mockups.svg" alt="illustration mockups">
             </div>
         </div>
     </nav>
